@@ -8,19 +8,19 @@
  * This file contains main toolkit class. Please read README file for quick startup guide and/or tutorials for more info.
  * 
  * @package POT
- * @version 0.1.5
+ * @version 0.1.6+SVN
  * @author Wrzasq <wrzasq@gmail.com>
- * @copyright 2007 - 2008 (C) by Wrzasq
+ * @copyright 2007 - 2009 (C) by Wrzasq
  * @license http://www.gnu.org/licenses/lgpl-3.0.txt GNU Lesser General Public License, Version 3
  * @todo future: Code as C++ extension (as an alternative to pure PHP library which of course would still be available).
  * @todo future: Implement POT namespace when it will be supported by PHP.
  * @todo future: Complete phpUnit test.
- * @todo future: Main POT class as database instance.
- * @todo 0.1.6: Interface for schema_info and map_store tables.
+ * @todo 0.1.6: Interface for map_store table.
+ * @todo 0.2.0: Make POT static class (this won't break compatibility because static methods can be called from dynamic context - however getInstance() method should be left).
  * @todo 0.2.0: Use prepared statements.
  * @todo 0.2.0: Drop PHP 5.0.x support (PDO:: constants, array type hinting).
- * @todo 0.2.0: Deprecations cleanup.
- * @todo 1.0.0: Deprecations cleanup.
+ * @todo 0.2.0: Deprecations cleanup (0.1.x and 0.0.x).
+ * @todo 1.0.0: Deprecations cleanup (0.x).
  * @todo 1.0.0: Replace all private members with procteted (left only reasonable private members).
  * @todo 1.0.0: E_* classes into *Exception, IOTS_* into *Interface, change POT classes prefix from OTS_* into OT_*, unify *List and *_List naming into *List, remove prefix from filenames.
  */
@@ -29,7 +29,7 @@
  * Main POT class.
  * 
  * @package POT
- * @version 0.1.5
+ * @version 0.1.6+SVN
  */
 class POT
 {
@@ -1682,6 +1682,33 @@ class POT
         }
 
         throw new E_OTS_NotLoaded();
+    }
+
+/**
+ * Returns OTServ database information.
+ * 
+ * <p>
+ * Especialy currently only schema version is available (via <i>'version'</i> key).
+ * </p>
+ * 
+ * @version 0.1.6+SVN
+ * @since 0.1.6+SVN
+ * @return array List of schema settings.
+ * @throws PDOException On PDO operation error.
+ * @example examples/schema.php schema.php
+ */
+    public function getSchemaInfo()
+    {
+        $info = array();
+
+        // generates associative array
+        /// FIXME: 0.2.0 - Use PDO::FETCH_KEY_ASSOC
+        foreach( $this->db->query('SELECT ' . $this->db->fieldName('name') . ', ' . $this->db->fieldName('value') . ' FROM ' . $this->db->tableName('schema_info') ) as $row)
+        {
+            $info[ $row['name'] ] = $row['version'];
+        }
+
+        return $info;
     }
 }
 
